# Kai

./: .env.example  .env.template  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  HTTPS_IMPLEMENTATION.md  HTTPS_SUMMARY.md  INTEGRATION_GUIDE.md  ORCHESTRATION_BLUEPRINT.md  ORCHESTRATION_V2_COMPLETE.md  PHASE1_SUMMARY.md  PHASE_3.1_COMPLETION_REPORT.md  QUALITY_IMPROVEMENTS_FINAL.md  QUALITY_TEST_RESULTS.md  QUICKSTART.md  README.md  RELEASE.md  RELEASE_NOTES.md  STREAMING.md  TESTING.md  dev.sh  docker-compose.yml  install.sh  kai  kai_memory.db  main.py  memory.jsonb  prod.sh  pyproject.toml  pytest.ini  reproduce_cli_crash.py  requirements.txt  run_master_tests.sh  server.py  setup_tunnel.sh  sync_docs_to_chroma.py  test.sh  test_https.py  (+4 more)
.github/: copilot-instructions.md
.github/workflows/: apply-patches.yaml  ci.yml
config/: api.yaml  capability_specs.yaml  models.yaml  tools.yaml
docker/: Dockerfile
docs/: ARCHITECTURE.md  CHATGPT_IMPORT.md  CLOUDFLARE_TUNNEL.md  CONFIGURATION.md  CPU_COMPATIBILITY.md  FILES_TO_EDIT.txt  GITHUB_ACTIONS_HTTPS.md  HTTPS.md  MEMORY_AUDIT_STATUS.md  MEMORY_ENHANCEMENTS.md  MEMORY_WIRED.md  QUICKSTART_SERVER.md  README.md  SELF_IMPROVEMENT_LOOP.md  TODO.md  api.md  deployment.md  memory_store_summary.md  troubleshooting.md
docs/archive/: MEMORY_INTEGRATION_TODO.md  SETUP_COMPLETE.md  START_HERE.md  TESTING_IMPLEMENTATION.md  TESTS_READY.md  TEST_COVERAGE_MATRIX.md  TEST_EXECUTION_REPORT.md  TEST_VALIDATION_REPORT.md
examples/: openai_client.py
memory/: store.py
models/: gemini_client.py  ollama_client.py  openai_client.py  openrouter_client.py
playground/: README.md  index.html  script.js  style.css
rag/: chroma_client.py  memory_view.py
scripts/: diagnose_avx.py  fix_docker_permissions.sh  generate_ssl_cert.sh  health_check.py  nightly_maintenance.py  quick_ngrok.sh  quick_validate.sh  run_all_tests.py  run_dev.sh  run_prod.sh  setup.sh  setup_no_avx.sh  setup_trusted_cert.sh  smoke.sh  start_api  start_api_dev  test_ollama.py  vibe_check.py  weekly_rage_report.py
specs/001-llm-orchestrator-wrapper/: spec.md
specs/002-fastapi-openai-endpoint/: spec.md
src/: __init__.py
src/agents/: reflection_agent.py
src/api/: adapter.py  config.py  streaming.py
src/cli/: main.py
src/core/: code_generator.py  conversation_service.py  cost_tracker.py  llm_connector.py  model_router.py  orchestrator.py  plan_analyzer.py  plan_executor.py  plan_types.py  query_analyzer.py  reasoner.py  response_processor.py  sanity_checker.py
src/embeddings/: __init__.py  factory.py  provider.py
src/feedback/: __init__.py  rage_trainer.py
src/lib/: capability_specs.py  config.py  encryption.py  fallback_handler.py  health_check.py  logger.py  metrics.py  rate_limiter.py
src/models/: conversation.py  knowledge.py  model_config.py  query.py  response.py  tool_invocation.py  user_profile.py
src/storage/: knowledge_store.py  memory_vault.py  sqlite_store.py  vector_store.py
src/tools/: base_tool.py  chatgpt_importer.py  code_exec_wrapper.py  code_executor.py  memory_store.py  sentiment_analyzer.py  web_search.py
tests/: README.md  conftest.py  test_memory_basic.py
tests/api/: test_openai_compatibility.py
tests/integration/: README.md  conftest.py  run_tests.sh  test_api.py  test_auto_code_generation.py  test_config.yaml  test_cost_aware_routing.py  test_e2e_validation.py  test_intelligent_routing.py  test_knowledge_flow.py  test_model_tier_selection.py  test_orchestration.py  test_orchestration_v2.py  test_quality_scenarios.py  test_smoke.py
tests/production/: __init__.py  test_offline_online_modes.py  test_production_ready.py
tests/regression/: __init__.py  test_bug_fixes.py  test_code_exec_enforcement.py
tests/static/: __init__.py  test_code_quality.py
tests/stress/: __init__.py  test_load_capacity.py
tools/: tools.py
(+26 files in other folders)
